--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -18,6 +18,7 @@
 @import utils.SessionKeys
 @import views.html.components.upload.uploadItem
 @import views.html.partials.errorManager
+@import models.upload.UpscanInitiateResponseModel
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
@@ -25,17 +26,22 @@
         govukButton: GovukButton,
         details: components.details,
         p: components.p,
-        bullets: components.bullets)
+        bullets: components.bullets,
+        fileUploadDialog: components.upload.fileUploadDialog)
 
 @(
-        postAction: Call,
-        initiateNextFileUpload: Call,
-        getStatusUrl: String => Call,
-        removeFileUrl: String => Call,
-        previousUploads: String,
-        getDuplicatesUrl: Call,
-        getErrorServiceUrl: Call,
-        pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+        postAction: Option[Call] = None,
+        initiateNextFileUpload: Option[Call] = None,
+        getStatusUrl: Option[String => Call] = None,
+        removeFileUrl: Option[String => Call] = None,
+        previousUploads: Option[String] = None,
+        getDuplicatesUrl: Option[Call] = None,
+        getErrorServiceUrl: Option[Call] = None,
+        pageMode: PageMode,
+        jsEnabled: Boolean = true,
+        upscanResponse: Option[UpscanInitiateResponseModel] = None,
+        form: Option[Form[_]] = None,
+        nextPageIfNoUpload: Option[String] = None)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @appealType = @{request.session.get(SessionKeys.appealType)}
 @detailsContent = {
@@ -62,55 +68,84 @@
     } else "otherReason.uploadEvidence.p2"
 }
 
-@layout(pageTitle = messages("otherReason.uploadEvidence.headingAndTitle"),
-    isPageFullWidth = false,
-    customJavaScript = Some("multiFileUpload.min.js"),
-    optPageMode = Some(pageMode)) {
-    <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.headingAndTitle")</h1>
+@if(jsEnabled) {
+    @layout(pageTitle = messages("otherReason.uploadEvidence.headingAndTitle"),
+        isPageFullWidth = false,
+        customJavaScript = Some("multiFileUpload.min.js"),
+        optPageMode = Some(pageMode)) {
+        <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.headingAndTitle")</h1>
 
-    @formHelper(action = postAction,
-        args =
-        (Symbol("data-multi-file-upload-start-rows"), "1"),
-        (Symbol("data-multi-file-upload-max-files"), "5"),
-        (Symbol("id"), "multi-upload-form"),
-        (Symbol("data-multi-file-upload-send-url-tpl"), initiateNextFileUpload.url),
-        (Symbol("data-multi-file-upload-uploaded-files"), previousUploads),
-        (Symbol("data-multi-file-upload-status-url-tpl"), getStatusUrl("{fileRef}").url),
-        (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl("{fileRef}").url),
-        (Symbol("data-multi-file-upload-duplicate-url-tpl"), getDuplicatesUrl.url),
-        (Symbol("data-multi-file-upload-error-url-tpl"), getErrorServiceUrl.url),
-        (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
-        (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload")),
-        (Symbol("data-multi-file-upload-file-uploading"), messages("upscan.fileUploading", "{fileNumber}", "{fileName}")),
-        (Symbol("data-multi-file-upload-file-removed"), messages("upscan.fileRemoved", "{fileNumber}", "{fileName}")),
-        (Symbol("data-multi-file-upload-error-prefix"), messages("error.prefix")),
-        (Symbol("data-multi-file-upload-file-uploaded"), messages("upscan.fileUploaded", "{fileNumber}", "{fileName}"))) {
+        @formHelper(action = postAction.get,
+            args =
+            (Symbol("data-multi-file-upload-start-rows"), "1"),
+            (Symbol("data-multi-file-upload-max-files"), "5"),
+            (Symbol("id"), "multi-upload-form"),
+            (Symbol("data-multi-file-upload-send-url-tpl"), initiateNextFileUpload.get.url),
+            (Symbol("data-multi-file-upload-uploaded-files"), previousUploads.get),
+            (Symbol("data-multi-file-upload-status-url-tpl"), getStatusUrl.get("{fileRef}").url),
+            (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl.get("{fileRef}").url),
+            (Symbol("data-multi-file-upload-duplicate-url-tpl"), getDuplicatesUrl.get.url),
+            (Symbol("data-multi-file-upload-error-url-tpl"), getErrorServiceUrl.get.url),
+            (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
+            (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload")),
+            (Symbol("data-multi-file-upload-file-uploading"), messages("upscan.fileUploading", "{fileNumber}", "{fileName}")),
+            (Symbol("data-multi-file-upload-file-removed"), messages("upscan.fileRemoved", "{fileNumber}", "{fileName}")),
+            (Symbol("data-multi-file-upload-error-prefix"), messages("error.prefix")),
+            (Symbol("data-multi-file-upload-file-uploaded"), messages("upscan.fileUploaded", "{fileNumber}", "{fileName}"))) {
 
-            <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
-            <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
-            <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
-            <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
+                <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
+                <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
+                <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
+                <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
 
             @details("otherReason.uploadEvidence.details.heading", detailsContent)
             <div class="govuk-inset-text hidden" aria-hidden="true"></div>
             <ul class="multi-file-upload__item-list"></ul>
 
-            <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
+                <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
 
-            <p class="govuk-body multi-file-upload__form-status hidden" aria-hidden="true">
-                @messages("otherReason.uploadEvidence.stillTransferring")...
-                <span class="file-upload__spinner ccms-loader"></span>
-            </p>
+                <p class="govuk-body multi-file-upload__form-status hidden" aria-hidden="true">
+                    @messages("otherReason.uploadEvidence.stillTransferring")...
+                    <span class="file-upload__spinner ccms-loader"></span>
+                </p>
 
-            <div class="multi-file-upload__notifications govuk-visually-hidden" aria-live="assertive" role="status"></div>
+                <div class="multi-file-upload__notifications govuk-visually-hidden" aria-live="assertive" role="status"></div>
 
-            <script type="text/x-template" id="multi-file-upload-item-tpl">@uploadItem(appConfig.acceptedFileTypes)</script>
-            <script type="text/x-template" id="error-manager-summary-tpl">@errorManager.summary(messages)</script>
-            <script type="text/x-template" id="error-manager-summary-item-tpl">@errorManager.summaryItem(messages)</script>
-            <script type="text/x-template" id="error-manager-message-tpl">@errorManager.message(messages)</script>
+                <script type="text/x-template" id="multi-file-upload-item-tpl">@uploadItem(appConfig.acceptedFileTypes)</script>
+                <script type="text/x-template" id="error-manager-summary-tpl">@errorManager.summary(messages)</script>
+                <script type="text/x-template" id="error-manager-summary-item-tpl">@errorManager.summaryItem(messages)</script>
+                <script type="text/x-template" id="error-manager-message-tpl">@errorManager.message(messages)</script>
 
-            <p>
-                @govukButton(Button(content = Text(messages("common.continue"))))
-            </p>
+                <p>
+                    @govukButton(Button(content = Text(messages("common.continue"))))
+                </p>
+            }
+    }
+} else {
+    @layout(pageTitle = messages("otherReason.uploadEvidence.headingAndTitle"),
+    isPageFullWidth = false,
+    formHasErrors = form.get.errors.nonEmpty,
+    formErrors = form.get.errors,
+    optPageMode = Some(pageMode)) {
+    <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.headingAndTitle")</h1>
+    <p class="govuk-body">@messages("otherReason.uploadEvidence.noJs.p1")</p>
+    <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
+    <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
+    <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
+    @details("otherReason.uploadEvidence.details.heading", detailsContent)
+
+    <form method="POST" action="@upscanResponse.get.uploadRequest.href" id="file-upload-form" enctype="multipart/form-data">
+        @for(field <- upscanResponse.get.uploadRequest.fields) {
+        <input type="hidden" name="@field._1" value="@field._2"/>
         }
+
+        <div id="file-upload-form-group" class="govuk-form-group">
+            @fileUploadDialog(form.get)
+        </div>
+        <p>
+            @govukButton(Button(content = Text(messages("otherReason.uploadEvidence.noJs.button.uploadFile"))))
+            <a href="@nextPageIfNoUpload" class="govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.noJs.button.uploadWithoutEvidence")</a>
+        </p>
+    </form>
+    }
 }
