--- a/app/views/errors/DuplicateAppealPage.scala.html
+++ b/app/views/errors/DuplicateAppealPage.scala.html
@@ -21,7 +21,8 @@
 @layout(
     pageTitle = messages("duplicateAppeal.headingAndTitle"),
     showPenaltyInformation = false,
-    isPageFullWidth = false
+    isPageFullWidth = false,
+    backLinkEnabled = false
 ) {
     <h1 class="govuk-heading-l">@messages("duplicateAppeal.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("duplicateAppeal.p1")</p>
