--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -21,7 +21,8 @@
 @layout(
     pageTitle = messages("problemWithService.headingAndTitle"),
     showPenaltyInformation = false,
-    isPageFullWidth = false
+    isPageFullWidth = false,
+    backLinkEnabled = false
 ) {
     <h1 class="govuk-heading-l">@messages("problemWithService.headingAndTitle")</h1>
     <p class="govuk-body">@messages("serviceUnavailable.p1")</p>
