--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -19,7 +19,8 @@
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
 @layout(
-    pageTitle = messages("unauthorised.headingAndTitle")
+    pageTitle = messages("unauthorised.headingAndTitle"),
+    backLinkEnabled = false
 ) {
     <h1 class="govuk-heading-xl">@messages("unauthorised.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("unauthorised.signUp")</p>
