--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -22,7 +22,7 @@
         govukButton: GovukButton,
         dateInput: components.inputDate)
 
-@(form: Form[_], postAction: Call)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
+@(form: Form[_], postAction: Call, pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
 @appealType = @{userRequest.session.get(SessionKeys.appealType)}
 @lppOrLspDynamicText = @{
@@ -34,7 +34,8 @@
 @layout(pageTitle = getMessage("healthReason.whenHealthIssueHappened.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors) {
+    formErrors = form.errors,
+    optPageMode = Some(pageMode)) {
     @formHelper(action = postAction) {
 
         @dateInput(
