--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -22,10 +22,11 @@
         govukButton: GovukButton,
         formHelper: FormWithCSRF)
 
-@(contentToDisplayInSummaryList: Seq[(String, String, String)])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(contentToDisplayInSummaryList: Seq[(String, String, String)], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
-    isPageFullWidth = false) {
+    isPageFullWidth = false,
+    optPageMode = Some(pageMode)) {
     <h1 class="govuk-heading-l">@messages("checkYourAnswers.headingAndTitle")</h1>
     <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
