--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -22,12 +22,13 @@
         characterCount: components.characterCount,
         formHelper: FormWithCSRF)
 
-@(form: Form[_])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("makingALateAppeal.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors) {
+    formErrors = form.errors,
+    optPageMode = Some(pageMode)) {
 
     @formHelper(action = controllers.routes.MakingALateAppealController.onSubmit()) {
 
