--- a/app/views/YouCanAppealPenaltyPage.scala.html
+++ b/app/views/YouCanAppealPenaltyPage.scala.html
@@ -20,12 +20,13 @@
         govukButton: GovukButton,
         radios: components.radios)
 
-@(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("youCanAppealThisPenalty.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors) {
+    formErrors = form.errors,
+    optPageMode = Some(pageMode)) {
     <h1 class="govuk-heading-l">@messages("youCanAppealThisPenalty.headingAndTitle")</h1>
     <p class="govuk-body">@messages("youCanAppealThisPenalty.p1")</p>
     @bullets(
