--- a/app/views/YouCannotAppealPage.scala.html
+++ b/app/views/YouCannotAppealPage.scala.html
@@ -20,11 +20,12 @@
 link: components.link,
 formHelper: FormWithCSRF)
 
-@()(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
+@(pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 @appealType = @{userRequest.session.get(SessionKeys.appealType)}
 
 @layout(pageTitle = messages("youCannotAppeal.headingAndTitle"),
-isPageFullWidth = false) {
+    isPageFullWidth = false,
+    optPageMode = Some(pageMode)) {
     <h1 class="govuk-heading-l">@messages("youCannotAppeal.headingAndTitle")</h1>
     @if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString)
                 || appealType.contains(PenaltyTypeEnum.Additional.toString)){
