--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -15,28 +15,28 @@
  *@
 
 @this(layout: Layout,
-bullets: components.bullets,
-formHelper: FormWithCSRF,
-govukButton: GovukButton,
-dateInput: components.inputDate)
+        bullets: components.bullets,
+        formHelper: FormWithCSRF,
+        govukButton: GovukButton,
+        dateInput: components.inputDate)
 
-@(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("bereavementReason.headingAndTitle"),
-isPageFullWidth = false,
-formHasErrors = form.errors.nonEmpty,
-formErrors = form.errors) {
-@formHelper(action = postAction) {
+    isPageFullWidth = false,
+    formHasErrors = form.errors.nonEmpty,
+    formErrors = form.errors,
+    optPageMode = Some(pageMode)) {
+        @formHelper(action = postAction) {
 
-@dateInput(
-form = form,
-legendContent = messages("bereavementReason.headingAndTitle"),
-legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-hintText = Some(messages("whenDidEventHappen.hint")),
-legendAsPageHeading = true
-)
+            @dateInput(
+                form = form,
+                legendContent = messages("bereavementReason.headingAndTitle"),
+                legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
+                hintText = Some(messages("whenDidEventHappen.hint")),
+                legendAsPageHeading = true
+            )
 
-@govukButton(Button(content = Text(messages("common.continue"))))
-    }
-
+            @govukButton(Button(content = Text(messages("common.continue"))))
+        }
 }
