--- a/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
@@ -22,12 +22,13 @@
         govukButton: GovukButton,
         dateInput: components.inputDate)
 
-@(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("fireOrFloodReason.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors) {
+    formErrors = form.errors,
+    optPageMode = Some(pageMode)) {
     @formHelper(action = postAction) {
 
         @dateInput(
