--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
@@ -27,7 +27,8 @@
 
 @(upscanResponse: UpscanInitiateResponseModel,
   form: Form[_],
-  fileListPage: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+  fileListPage: String,
+  pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @detailsContent = {
         @p(Html(messages("otherReason.uploadEvidence.details.p1")))
@@ -47,7 +48,8 @@
 @layout(pageTitle = messages("otherReason.uploadAnotherDocument.noJs.headingAndTitle"),
         isPageFullWidth = false,
         formHasErrors = form.errors.nonEmpty,
-        formErrors = form.errors){
+        formErrors = form.errors,
+        optPageMode = Some(pageMode)) {
         <h1 class="govuk-heading-l">@messages("otherReason.uploadAnotherDocument.noJs.headingAndTitle")</h1>
         <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
         <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
