--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -25,5 +25,5 @@
     <h1 class="govuk-heading-xl">@messages("unauthorised.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("unauthorised.signUp")</p>
     <p class="govuk-body">@messages("unauthorised.alreadySignedUp")</p>
-    <p class="govuk-body"><a class="govuk-link" href="@routes.SignOutController.signOut()">@messages("base.signOut")</a></p>
+    <p class="govuk-body"><a class="govuk-link" href="@routes.SignOutController.signOut">@messages("base.signOut")</a></p>
 }
