--- a/app/views/YouCanAppealPenaltyPage.scala.html
+++ b/app/views/YouCanAppealPenaltyPage.scala.html
@@ -44,6 +44,6 @@
             items = radioOptions,
             legendAsHeading = false
         )
-        @govukButton(Button(content = Text(messages("common.continue"))))
+        @govukButton(Button(content = Text(messages("common.continue")),preventDoubleClick = true))
     }
 }
