--- a/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
@@ -19,7 +19,7 @@
 
 @this(layout: Layout,
         link: components.link,
-        govukButton: GovukButton,
+        button: components.button,
         characterCount: components.characterCount,
         formHelper: FormWithCSRF)
 
@@ -48,6 +48,6 @@
             maxLength = Some(5000)
         )
 
-        @govukButton(Button(content = Text(messages("common.continue"))))
+        @button("common.continue")
     }
 }
