--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
@@ -19,7 +19,7 @@
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton,
+        button: components.button,
         p: components.p,
         radios: components.radios,
         govukSummaryList : GovukSummaryList)
@@ -55,6 +55,6 @@
                 legendClasses = "govuk-fieldset__legend--m"
             )
         }
-        @govukButton(Button(content = Text(messages("common.continue"))))
+        @button("common.continue")
     }
 }
