--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
@@ -22,7 +22,7 @@
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton)
+        button: components.button)
 
 @(postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
@@ -32,6 +32,6 @@
     <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.takingLongerThanExpected.headingAndTitle")</h1>
 
     @formHelper(action = postAction) {
-        @govukButton(Button(content = Text(messages("otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain"))))
+        @button("otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain")
     }
 }
