--- a/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
@@ -39,7 +39,7 @@
             legendAsPageHeading = true
         )
 
-        @govukButton(Button(content = Text(messages("common.continue")),preventDoubleClick = true))
+        @govukButton(Button(content = Text(messages("common.continue"))))
     }
 
 
