--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -38,6 +38,6 @@
               legendAsHeading = true
               )
 
-              @govukButton(Button(content = Text(messages("common.continue")),preventDoubleClick = true))
+              @govukButton(Button(content = Text(messages("common.continue"))))
     }
 }
