--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -17,7 +17,7 @@
 @this(layout: Layout,
 bullets: components.bullets,
 formHelper: FormWithCSRF,
-button: components.button,
+govukButton: GovukButton,
 radios: components.radios)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
@@ -35,6 +35,6 @@ radios: components.radios)
             items = radioOptions,
             legendAsHeading = true
         )
-    @button("common.continue")
+    @govukButton(Button(content = Text(messages("common.continue"))))
     }
 }
