--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -20,7 +20,7 @@
 @this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
-        button: components.button,
+        govukButton: GovukButton,
         radios: components.radios,
         link: components.link
 )
@@ -43,7 +43,7 @@
             legendAsHeading = true
         )
 
-        @button("common.continue")
+        @govukButton(Button(content = Text(messages("common.continue"))))
     }
 
 
