--- a/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
@@ -19,7 +19,7 @@
 @this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
-        button: components.button,
+        govukButton: GovukButton,
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
@@ -39,7 +39,7 @@
             legendAsPageHeading = true
         )
 
-        @button("common.continue")
+        @govukButton(Button(content = Text(messages("common.continue"))))
     }
 
 }
