--- a/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
@@ -18,7 +18,7 @@
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
-        button: components.button,
+        govukButton: GovukButton,
         radios: components.radios)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
@@ -37,6 +37,6 @@
             formFieldId = "hasStayEnded"
         )
 
-        @button("common.continue")
+        @govukButton(Button(content = Text(messages("common.continue"))))
     }
 }
