--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -40,7 +40,7 @@
             legendAsPageHeading = true
         )
 
-        @govukButton(Button(content = Text(messages("common.continue")),preventDoubleClick = true))
+        @govukButton(Button(content = Text(messages("common.continue"))))
     }
 
 
