[PRM-1255-B] - Add lang param for timeout dialog

--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -56,6 +56,7 @@
     @head(
         if(showSignOut) {
             Some(hmrcTimeoutDialog(TimeoutDialog(
+                language = Some(messages.lang.code),
                 timeout = Some(appConfig.timeoutPeriod),
                 countdown = Some(appConfig.timeoutCountdown),
                 signOutUrl = Some(routes.SignOutController.signOut.url),
